debut avec swagger
